examples/datalog/15_arithmetic/23_arithmetic_in_filter.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_arith_filter
Knowledge graph 'test_arith_filter' created.
Switched to knowledge graph: test_arith_filter
> .kg use test_arith_filter
Switched to knowledge graph: test_arith_filter
> +items[(1, 10, 2), (2, 20, 3), (3, 15, 1), (4, 25, 2)].
Inserted 4 fact(s) into 'items'.
> expensive(Id, Q, P) :- items(Id, Q, P), Q * P > 30.
Script error: Query execution failed: Unsupported comparison: Arithmetic(Binary { op: Mul, left: Variable("Q"), right: Variable("P") }) GreaterThan Constant(30)
